blocks/banner/banner.css
.banner-container > .banner-wrapper.fill {
  --banner-color: var(--color-gray-200);

  padding: 0;
}

.banner.transparent,
.banner.inset,
.banner.image {
  --banner-color: transparent;
}

.banner p {
  line-height: var(--line-height-xl);
}

.banner > div {
  display: grid;
  gap: 0;
  background-color: var(--banner-color);
}

@media (width >= 800px) {
  .banner > div {
    grid-template-columns: repeat(2, minmax(0, 1fr));
  }
}

/* banner text */
.banner .text-wrapper {
  order: 1;
  padding: var(--horizontal-spacing);
}

.banner .text-wrapper .icon svg {
  width: 100%;
  max-width: 300px;
  height: unset;
  padding-bottom: 1em;
}

@media (width >= 800px) {
  .banner .text-wrapper {
    order: unset;
  }
}

@media (width >= 1000px) {
  .banner .text-wrapper {
    padding: var(--spacing-900) var(--horizontal-spacing);
  }
}

/* banner image */
.banner .img-wrapper,
.banner .vid-wrapper {
  max-height: 50dvh;
  line-height: 0;
}

.banner .vid-wrapper,
.banner .vid-wrapper video {
  aspect-ratio: 16 / 9;
}

.banner .img-wrapper img,
.banner .vid-wrapper video {
  max-height: 50dvh;
  width: 100%;
  object-fit: cover;
}

@media (width >= 800px) {
  .banner .img-wrapper,
  .banner .vid-wrapper {
    position: relative;
    max-height: unset;
  }

  .banner .vid-wrapper {
    aspect-ratio: unset;
    object-fit: unset;
  }

  .banner .img-wrapper img,
  .banner .vid-wrapper video {
    position: absolute;
    inset: 0;
    max-height: unset;
    width: 100%;
    height: 100%;
    object-fit: cover;
  }

  .banner.left-text .img-wrapper img {
    object-position: 40%;
  }

  .banner.right-text .img-wrapper img {
    object-position: 60%;
  }
}

/* dark color modifier */
.banner.dark .text-wrapper {
  color: var(--color-white);
}

.banner.dark .eyebrow {
  color: var(--color-gray-100);
}

.banner.dark .text-wrapper a.button.link,
.banner.dark .text-wrapper a.button.link:hover,
.banner.dark .text-wrapper a.button.link:focus {
  color: inherit;
}

/* center text modifier */
.banner.text-center > div {
  text-align: center;
}

.banner.text-center .button-wrapper {
  justify-content: center;
}

/* narrow modifier */
@media (width >= 800px) {
  .banner.narrow-media.left-text > div {
    grid-template-columns: 1fr 2fr;
  }

  .banner.narrow-media.right-text > div {
    grid-template-columns: 2fr 1fr;
  }
}

/* square modifier */
.banner.square .img-wrapper,
.banner.square .vid-wrapper,
.banner.square .img-wrapper img,
.banner.square .vid-wrapper video {
  aspect-ratio: 1 / 1;
  max-height: unset;
}

@media (width >= 800px) {
  .banner.square .img-wrapper,
  .banner.square .vid-wrapper,
  .banner.square .img-wrapper img,
  .banner.square .vid-wrapper video {
    aspect-ratio: unset;
  }

  .banner.square.left-text .img-wrapper img,
  .banner.square.right-text .img-wrapper img,
  .banner.square.left-text .vid-wrapper video,
  .banner.square.right-text .vid-wrapper video {
    object-position: center;
  }
}

.banner.square .text-wrapper .img-wrapper {
  aspect-ratio: unset;
}

/* inset variant */
.banner.inset {
  margin: auto;
  max-width: 600px;
}

.banner.inset > div {
  gap: var(--horizontal-spacing);
}

.fill .banner.inset > div {
  padding: var(--horizontal-spacing);
}

@media (width >= 800px) {
  .banner.inset > div,
  .banner.inset.square > div {
    grid-template-columns: 1fr;
  }
}

@media (width >= 1000px) {
  .banner.inset {
    max-width: unset;
  }

  .banner.inset > div {
    display: flex;
    align-items: center;
  }

  .banner.inset.square > div {
    display: grid;
    grid-template-columns: 1fr 1fr;
    justify-items: center;
  }
}

.banner.inset .text-wrapper {
  order: 1;
  padding: 0;
}

.banner.inset .text-wrapper > :first-child {
  margin-top: 0;
}

@media (width >= 1000px) {
  .banner.inset .text-wrapper {
    order: unset;
    flex: 1 0 40%;
  }
}

.banner.inset .img-wrapper img,
.banner.inset .vid-wrapper video {
  position: static;
  border-radius: var(--rounding-m);
  object-position: center;
}

@media (width >= 800px) {
  .banner.inset.square .img-wrapper img,
  .banner.inset.square .vid-wrapper video {
    aspect-ratio: 1 / 1;
  }
}

@media (width >= 1000px) {
  .banner.inset .img-wrapper,
  .banner.inset .vid-wrapper {
    flex: 0 1 60%;
    max-height: 600px;
    aspect-ratio: 4 / 3;
  }

  .banner.inset.square .img-wrapper,
  .banner.inset.square .vid-wrapper {
    aspect-ratio: unset;
    max-height: unset;
  }

  .fill .banner.inset .img-wrapper img,
  .fill .banner.inset .vid-wrapper video {
    object-fit: contain;
  }

  .banner.inset.square .img-wrapper img,
  .banner.inset.square .vid-wrapper video {
    aspect-ratio: 1 / 1;
    max-width: 600px;
  }
}

/* stylelint-disable no-descending-specificity */

/* image variant */
.banner.image > div {
  align-items: center;
}

@media (width >= 800px) {
  .banner.image > div {
    grid-template-columns: 200px 1fr;
  }
}

@media (width >= 1000px) {
  .banner.image > div {
    grid-template-columns: 265px 1fr 265px;
  }

  .banner.image .text-wrapper {
    padding: var(--spacing-400);
  }
}

@media (width >= 1200px) {
  .banner.image > div {
    grid-template-columns: 370px 1fr 370px;
  }
}

.banner.image .img-wrapper {
  justify-self: center;
}

.banner.image .img-wrapper:last-child {
  display: none;
}

.banner.image .img-wrapper img,
.banner.image .vid-wrapper video {
  position: static;
  max-width: 265px;
  height: auto;
  object-position: center;
}

@media (width >= 1000px) {
  .banner.image .img-wrapper:last-child {
    display: unset;
  }

  .banner.image .img-wrapper img,
  .banner.image .vid-wrapper video {
    max-width: 370px;
  }
}

